<resources>
    <string name="app_name">Pokedex-clone</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="hp">HP</string>
    <string name="base_stats">Base Stats</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>
    <string name="network_error">Network Error</string>
    <string name="something_error">Something Error</string>
    <string name="hunseong">hunseong</string>
</resources>